--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,11 +74,17 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.0'
     kapt 'com.github.bumptech.glide:compiler:4.15.0'
     //Material
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.7.0'
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-config-ktx'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
 
+    //ViewPager
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+    //LoopingViewPager
+    implementation 'com.asksira.android:loopingviewpager:1.4.1'
 
 }
